--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -8,12 +8,4 @@
   border-radius: 20px;
 }
 
-.filtre_map_list{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 12vh 5px;
-}
-
 // background-size: cover; background-position: 50%"
